[package]
name = "mizu"
version = "1.0.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "An accurate gameboy(DMG) and gameboy color emulator. Front-end for mizu-core"
readme = "README.md"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[dependencies]
mizu-core = { version = "1.0.0", path = "mizu-core" }
sfml = { version = "0.21", default-features = false, features = ["graphics"] }
ringbuf = "0.3"
cpal = "0.15"
clap = { version = "4.0", features = ["string"] }
native-dialog = "0.7"
directories-next = "2.0.0"
rubato = "0.12"

[workspace]
members = [
    "mizu-core",
    "save_state",
    "save_state_derive"
]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

