[package]
name = "gb-emu-core"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
fixed-vec-deque = "0.1.9"

[dev-dependencies]
crc = "1.8.1"
