[package]
name = "gb-emu-sfml"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-emu-core = { path = "../gb-emu-core" }
sfml = "^0.15.1"
ringbuf = "0.2.2"
cpal = "0.13.1"

