[package]
name = "mizu-core"
version = "0.1.2"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"
description = "The core library implementation of all Gameboy emulation for Mizu"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[dependencies]
bitflags = "1.2.1"
fixed-vec-deque = "0.1.9"
byteorder = "1.3.4"
thiserror = "1.0.23"

serde = "1.0.123"
typetag = "0.1.7"
bincode = "1.3.1"
sha2 = "0.9.3"

save_state = { version = "^0.1.0", path = "../save_state" }

[dev-dependencies]
crc = "1.8.1"
