[package]
name = "save_state"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"
description = "Implementation for the save state mechanism in mizu"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[dependencies]
serde = "1.0.123"
bincode = "1.3.1"
thiserror = "1.0.23"
