[package]
name = "save_state"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "Implementation for the save state mechanism in mizu"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[dependencies]
serde = "1.0.123"
ciborium = "0.2.0"
thiserror = "1.0.23"
byteorder = "1.3.4"
paste = "1.0.5"

save_state_derive = { version = "^0.1.0", path = "../save_state_derive" }
