[package]
name = "save_state"
version = "0.1.1"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "Implementation for the save state mechanism in mizu"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[dependencies]
serde = "1.0"
ciborium = "0.2"
thiserror = "1.0"
byteorder = "1.3"
paste = "1.0"

save_state_derive = { version = "0.1.1", path = "../save_state_derive" }
