[package]
name = "save_state_derive"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"
description = "proc macro implementation for the save state mechanism in mizu"
repository = "https://github.com/Amjad50/mizu"
license = "MIT"
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"

[dev-dependencies]
save_state = { path = "../save_state" }
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.1"
